<resources>
    <string name="app_name">PinnacleConnection</string>
    <string name="title_activity_maintenance_request">maintenance_request</string>
    <string name="title_home">Calendar</string>
    <string name="title_dashboard"></string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Main Activity (Annoucments page) -->
    <string name="action_button_maintenance_request">Maintaince Request</string>
    <string name="action_button_theater_request">Request Theater</string>

    <!-- Maintenance Request -->
    <string name="submit_button">Submit</string>
    <string name="picture_button">Picture</string>
    <string name="apartment_number">Apartment</string>
    <string name="send_maintenance_request_title">Send Maintenance Request</string>
    <string name="enter_issue_plaintext">Description of Issue</string>
    <string name="urgent_checkbox">Urgent</string>
    <string name="image_loading">Image is Loading</string>

    <!-- Theater Request -->
    <string name="scheduled_times">Scheduled Times</string>
    <string name="reserve">Reserve Theater</string>
    <string name="submitted_requests">Submitted Requests</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Create Account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_messaging">MessagingActivity</string>

    <!-- Strings related to create Announcement -->
    <string name="create_announcements_title">Create an Announcement</string>
    <string name="title_of_annoucements">Title of Announcement</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="time_of_event">Time of Event</string>
    <string name="date_of_event">Date of Event</string>
    <string name="create_annoucements_body_of_annoucement">Enter the body of the annoucement</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_announcement">CreateAnnouncement</string>
    <string name="announcement_title">Announcement</string>
    <string name="theater_title">Reserve Theater</string>
    <string name="maintenance_title">Request Maintenance</string>
    <string name="admin_title">Create Announcement</string>
    <string name="login_title">Sign Out</string>
    <string name="message_title">Message Manager</string>
    <string name="dialog_delete_announcement">Delete Announcement?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add_image">Add Image</string>
</resources>