<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jonathanashcraft.pinnacleconnection.CreateAnnouncement"
    tools:showIn="@layout/activity_create_announcement">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="724dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/create_announcements_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/announcement_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/title_of_annoucements"
            android:inputType="textCapWords|textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/announcement_time"
            android:layout_width="142dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/time"
            android:inputType="time"
            app:layout_constraintStart_toStartOf="@+id/announcement_title"
            app:layout_constraintTop_toBottomOf="@+id/announcement_title" />

        <EditText
            android:id="@+id/announcement_date"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/announcement_time"
            app:layout_constraintTop_toBottomOf="@+id/announcement_title" />

        <EditText
            android:id="@+id/announcement_description"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/create_annoucements_body_of_annoucement"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="0dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/announcement_date" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="onSubmitAnnouncement"
            android:text="Submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/announcement_description" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
