<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jonathanashcraft.pinnacleconnection.CreateAnnouncement">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="724dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/create_announcements_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="76dp" />

        <EditText
            android:id="@+id/announcement_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/title_of_annoucements"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/announcement_time"
            android:layout_width="142dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/time"
            android:inputType="time"
            app:layout_constraintStart_toStartOf="@+id/announcement_title"
            app:layout_constraintTop_toBottomOf="@+id/announcement_title" />

        <EditText
            android:id="@+id/announcement_date"
            android:layout_width="141dp"
            android:layout_height="42dp"
            android:layout_marginStart="28dp"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="date"
            app:layout_constraintStart_toEndOf="@+id/announcement_time"
            tools:layout_editor_absoluteY="164dp" />

        <EditText
            android:id="@+id/announcement_description"
            android:layout_width="351dp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/create_annoucements_body_of_annoucement"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="@+id/announcement_time"
            app:layout_constraintTop_toBottomOf="@+id/announcement_date" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="236dp"
            android:text="Submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/announcement_description" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_create_announcement" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorAccent"
        app:rippleColor="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_menu_add" />

</android.support.design.widget.CoordinatorLayout>
